# discord-poll-bot

./: Procfile  README.md  calculation.py  client.py  models.py  pyproject.toml
.github/workflows/: main.yml
src/: calculation.py  client.py  main.py  message_utils.py  models.py  settings.py
