[tool.poetry]
name = "discord-poll-bot"
version = "0.1.0"
description = ""
authors = ["Raphael Biersbach <raphael.biersbach@gmx.net>"]

[tool.poetry.dependencies]
python = "3.10.x"
discord = "2.1.0"
attr = "^0.3.1"
linkpreview = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
